# ftdc-tools

./: .drone.yml  .evergreen.yml  .gitignore  README.md  pyproject.toml  setup.cfg
.github/: CODEOWNERS  pull_request_template.md
ftdc_tools/: ftdc_decoder.py
src/ftdc_tools/: __init__.py  decode.py  decoder.py
src/ftdc_tools/rollups/: __init__.py  client_perf.py
tests/: conftest.py  test_ftdc_decode.py  test_ftdc_tools.py
tests/rollups/: test_client_perf.py
tests/test_files/ftdc/: test_data_ftdc_file_0_doc  test_data_ftdc_file_101_doc  test_data_ftdc_file_1_doc
tests/test_files/json/: test_data_ftdc_file_0_doc  test_data_ftdc_file_101_doc  test_data_ftdc_file_1_doc
