[tool.poetry]
name = "ftdc-tools"
version = "0.1.0"
description = ""
authors = ["Mridul Augustine <mridul.augustine@mongodb.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest-asyncio = "^0.18.3"
aiofile = "^3.7.4"
pytest-mypy = "^0.9.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
