[tool.poetry]
name = "ftdc-tools"
version = "0.1.0"
description = ""
authors = ["Mridul Augustine <mridul.augustine@mongodb.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest-asyncio = "^0.18.3"
aiofile = "^3.7.4"
pytest-mypy = "^0.9.1"
flake8 = "^4.0.1"
black = "^22.3.0"
pytest-flake8 = "^1.1.1"
mypy = "^0.960"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^22.4.25"
flake8-isort = "^4.1.1"
flake8-annotations = "^2.9.0"
flake8-docstrings = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[tool.black]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
