[tool.poetry]
name = "ftdc-tools"
version = "0.3.1"
description = ""
authors = [
    "Alexander Costas <alexander.costas@mongodb.com>",
    "Mridul Augustine <mridul.augustine@mongodb.com>"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
aiofile = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-asyncio = "^0.19.0"
pytest-black = "^0.3.7"
pytest-flake8 = "^1.0.4"
pytest-mypy = "^0.9.1"
pytest-pydocstyle = "^2.3.0"
pytest-isort = "^1.3.0"
autoflake = "^1.4.0"
flake8 = "^3.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
